--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="item_price_hint">Enter cost of the grocery</string>
     <string name="freezer_status">Is the item \nin the freezer?</string>
     <string name="item_expiration">Expiration Date:</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
