Implemented display and retrieval of grocery list items alphabetically

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string-array name="grocery_sorting">
         <item>Alphabetical</item>
         <item>Expiration Date</item>
-        <item>Food Category</item>
+        <item>Food Group</item>
     </string-array>
 
 </resources>
