--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="item_price_hint">Enter cost of the grocery</string>
     <string name="freezer_status">Is the item \nin the freezer?</string>
     <string name="item_expiration">Expiration Date:</string>
+    <string name="spo">SPO</string>
+    <string name="exclamation">!</string>
+    <string name="ler_alert">LER ALERT</string>
+    <string name="save_the_world_by_saving_your_wallet">Save the world, by saving your wallet</string>
 
     <string-array name="food_groups">
         <item>Fruits</item>
@@ -34,11 +38,11 @@
     </string-array>
 
     <string-array name="bar_graph_sorting">
-        <item >Total Money Spent</item>
-        <item >Total Money Waste</item>
+        <item >Money Spent</item>
+        <item >Money Waste</item>
         <item >Total Money Used</item>
-        <item >Total Food Bought</item>
-        <item >Total Food Wasted</item>
+        <item >Food Bought</item>
+        <item >Food Wasted</item>
         <item >Total Food Used</item>
     </string-array>
 
